Reduce collapsed creature status margin to avoid spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -344,7 +344,7 @@ a:hover {
 }
 
 .collapsed-creature--status__margin {
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 .collapsed-creature--name {
